--- a/imageviewer/src/main/res/values/styles.xml
+++ b/imageviewer/src/main/res/values/styles.xml
@@ -5,9 +5,14 @@
 
     <style name="ImageViewerDialog.NoStatusBar" parent="android:Theme.Translucent.NoTitleBar.Fullscreen"/>
 
-    <style name="ImageViewerDialog.Default" parent="android:Theme.Translucent.NoTitleBar">
+    <style name="ImageViewerDialog.DefaultBaseTheme" parent="android:Theme.Translucent.NoTitleBar">
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
+    </style>
+
+    <style name="ImageViewerDialog.Default" parent="ImageViewerDialog.DefaultBaseTheme">
+        <item name="android:windowTranslucentNavigation">true</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
 </resources>
